--- a/android/BumbleBee/app/src/main/AndroidManifest.xml
+++ b/android/BumbleBee/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.samsung.sdk.motion.test.MotionTest"
+            android:name="com.chaibytes.bumblebee.MotionTest"
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait" >
             <intent-filter>
