--- a/android/BumbleBee/app/build.gradle
+++ b/android/BumbleBee/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.google.firebase:firebase-firestore:11.4.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.android.gms:play-services-location:11.4.2'
 }
 
 
