--- a/android/BumbleBee/app/src/main/AndroidManifest.xml
+++ b/android/BumbleBee/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="com.samsung.android.providers.context.permission.WRITE_USE_APP_FEATURE_SURVEY" />
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+
     <supports-screens
         android:anyDensity="true"
         android:largeScreens="true"
