--- a/android/BumbleBee/app/build.gradle
+++ b/android/BumbleBee/app/build.gradle
@@ -28,8 +28,13 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.google.firebase:firebase-firestore:11.4.2'
     testCompile 'junit:junit:4.12'
+    // compile 'com.flaviofaria:kenburnsview:1.0.7'
+    compile 'com.android.support:cardview-v7:25.3.1'
+
+    // compile 'com.github.developer-shivam:Crescento:1.2.0'
     compile 'com.google.android.gms:play-services-location:11.4.2'
 }
 
