--- a/android/BumbleBee/app/build.gradle
+++ b/android/BumbleBee/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        resValue "string", "google_maps_key", (project.findProperty("GOOGLE_MAPS_API_KEY") ?: "")
     }
     buildTypes {
         release {
@@ -36,6 +37,7 @@ dependencies {
 
     // compile 'com.github.developer-shivam:Crescento:1.2.0'
     compile 'com.google.android.gms:play-services-location:11.4.2'
+    compile 'com.google.android.gms:play-services:11.4.2'
 }
 
 
