--- a/android/BumbleBee/app/src/main/AndroidManifest.xml
+++ b/android/BumbleBee/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:supportsRtl="true"
         tools:replace="android:allowBackup"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
