--- a/android/BumbleBee/app/build.gradle
+++ b/android/BumbleBee/app/build.gradle
@@ -27,11 +27,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:design:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.2.0'
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.google.firebase:firebase-firestore:11.4.2'
+    compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
     testCompile 'junit:junit:4.12'
     // compile 'com.flaviofaria:kenburnsview:1.0.7'
     compile 'com.android.support:cardview-v7:25.2.0'
